# sam-pretraining

./: .gitignore  pyproject.toml  sync.sh
experiments/: check_data_validity.py  generate_embeddings.py  pretrain_with_sam_embeddings.py
src/sam_pretraining/dataset/: __init__.py  image_dataset.py  sam_embedding_dataset.py
src/sam_pretraining/model/: __init__.py  mobilenet.py
src/sam_pretraining/sam/: __init__.py  embedding_generator.py  setup.py
src/sam_pretraining/train/: __init__.py  sam_pretraining.py
src/sam_pretraining/utils/: __init__.py  checkpointing.py  crop_embeddings.py  default_device.py
